# cmd/main.go
@@ -3,13 +3,16 @@ package main
 import (
 	"queen-laundry/config"
 	"queen-laundry/pkg/database"
+	"queen-laundry/pkg/middleware"
 
 	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 
 	_ "queen-laundry/docs"
+	"queen-laundry/internal/auth"
 	"queen-laundry/internal/customer"
 	"queen-laundry/internal/order"
+	"queen-laundry/internal/payment"
 	"queen-laundry/internal/service"
 
 	swaggerFiles "github.com/swaggo/files"
@@ -19,8 +22,14 @@ import (
 // @title Queen Laundry API
 // @version 1.0
 // @description API untuk sistem laundry
+
 // @host localhost:5050
 // @BasePath /
+
+// JWT CONFIG
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
 func main() {
 	cfg := config.LoadConfig()
 
@@ -29,7 +38,13 @@ func main() {
 	r := gin.Default()
 
 	// CORS
-	r.Use(cors.Default())
+	r.Use(cors.New(cors.Config{
+		AllowOrigins:     []string{"*"}, // bisa diganti domain nanti
+		AllowMethods:     []string{"GET", "POST", "PUT", "DELETE"},
+		AllowHeaders:     []string{"Origin", "Content-Type", "Authorization"},
+		ExposeHeaders:    []string{"Content-Length"},
+		AllowCredentials: true,
+	}))
 
 	// Swagger
 	r.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
@@ -42,9 +57,17 @@ func main() {
 	})
 
 	// TODO: register routes modular di sini
-	service.RegisterRoutes(r, db)
-	customer.RegisterRoutes(r, db)
-	order.RegisterRoutes(r, db)
+	// ================= PUBLIC =================
+	auth.RegisterRoutes(r, db)
+
+	// ================= PROTECTED =================
+	protected := r.Group("/")
+	protected.Use(middleware.JWTAuthMiddleware())
+
+	order.RegisterRoutes(protected, db)
+	customer.RegisterRoutes(protected, db)
+	payment.RegisterRoutes(protected, db)
+	service.RegisterRoutes(protected, db)
 	_ = db
 
 	r.Run(":" + cfg.Port)
